# robot-gitee-review-trigger

./: .bazelrc  .gitignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  approver_helper.go  build.sh  can_review.go  ci.go  client.go  config.go  go.mod  go.sum  guide.go  job.go  label.go  main.go  models.go  note_event.go  post_action.go  pr_event.go  pullrequest.go  review.go  review_config.go  reviewer_helper.go  robot.go  stats.go  suggest_approvers.go  suggest_reviewers.go
approvers/: BUILD.bazel
ci-parser/: BUILD.bazel  parser.go  parser_test.go
plugins/: BUILD.bazel  util.go
repoowners/: BUILD.bazel  owners.go
