load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["util.go"],
    importpath = "github.com/opensourceways/robot-gitee-review-trigger/plugins",
    visibility = ["//visibility:public"],
    deps = ["@com_github_opensourceways_go_gitee//gitee:go_default_library"],
)
