load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["owners.go"],
    importpath = "github.com/opensourceways/robot-gitee-review-trigger/repoowners",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_opensourceways_repo_owners_cache//grpc/client:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_k8s_apimachinery//pkg/util/sets:go_default_library",
    ],
)
